--- a/index.html
+++ b/index.html
@@ -1,74 +1,24 @@
-<!doctype html>
-<html lan="en">
-	<head>
-		<title>Adam Hammer</title>
-		<style>
-            .main_text
-            {
-                font-family:    Century Gothic, Tahoma, Arial, Helvetica, sans-serif;
-                font-size:      24px;
-                color: white;
-                /*font-weight:    bold;*/
-                padding-bottom: 20px;
-            }
-
-            .main_picture
-            {
-            	padding-top: 50px;
-    			padding-bottom: 50px;
-            }
-        </style>
-
-        <link rel="icon" href="http://i.imgur.com/pNr8ehP.png">
-	</head> <!-- E6E6FA BDC3C7 bgcolor="#606060" -->
-	<body background="background2.png">
-		<center>
-
-			<img class="main_picture" src="main3.png" width="300">
-			<!--<div class="main_text" style="max-width:350px;">Qui et etiam viris, qui cu cetero regione molestie. Saepe affert adipisci nam ad, pro ornatus neglegentur definitiones ea. Mea fierent scribentur cu, sit quaeque alienum no. Ne nobis tantas vim. At pri tibique lucilius, his in assum tacimates recusabo. Ex mei epicurei luptatum, euismod blandit nec at</div>-->
-
-			<div class="main_text" style="max-width:350px;">I can google anything.</div>
-
-			<a
-			target="_blank"
-			href="https://www.facebook.com/">
-			<img src="http://i.imgur.com/9GYMEcx.png" height="42" width="42" 
-			onmouseover="this.src='http://i.imgur.com/H1K1CIq.png';" 
-			onmouseout="this.src='http://i.imgur.com/9GYMEcx.png';"></a>
-
-			<a
-			target="_blank"
-			href="https://github.com/">
-			<img src="http://i.imgur.com/UP0eRuX.png" height="42" width="42"
-			onmouseover="this.src='http://i.imgur.com/qU4Llly.png';" 
-			onmouseout="this.src='http://i.imgur.com/UP0eRuX.png';"></a>
-
-			<a
-			target="_blank"
-			href="https://www.instagram.com/">
-			<img src="http://i.imgur.com/MR78g9A.png" height="42" width="42"
-			onmouseover="this.src='http://i.imgur.com/eIz0ZeP.png';" 
-			onmouseout="this.src='http://i.imgur.com/MR78g9A.png';"></a>
-
-			<a
-			target="_blank"
-			href="https://open.spotify.com/">
-			<img src="https://i.imgur.com/MuQ56SC.png" height="42" width="42"
-			onmouseover="this.src='https://i.imgur.com/7B1uevQ.png';" 
-			onmouseout="this.src='https://i.imgur.com/MuQ56SC.png';"></a>
-
-			<a
-			target="_blank"
-			href="https://twitter.com/">	
-			<img src="http://i.imgur.com/81PEHAq.png" height="42" width="42"onmouseover="this.src='http://i.imgur.com/LHK6BrG.png';" 
-			onmouseout="this.src='http://i.imgur.com/81PEHAq.png';"></a>
-
-			<a
-			target="_blank"
-			href="https://www.youtube.com/">
-			<img src="http://i.imgur.com/UWxTPlb.png" height="42" width="42"
-			onmouseover="this.src='http://i.imgur.com/B26eeY9.png';" 
-			onmouseout="this.src='http://i.imgur.com/UWxTPlb.png';"></a>
-		</center>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Canvas resize</title>
+    <style>
+        canvas {
+            border: 1px solid black;
+        }
+        html, body {
+            margin: 0;
+            width:  100%;
+            height: 100%;
+            overflow: hidden; /*  Disable scrollbars */
+            display: block;
+            background-color: black;
+        }
+    </style>
+</head>
+<body>
+    <canvas></canvas>
+    <script src="main.js"></script>
+</body>
 </html>
