--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <canvas>
     </canvas>
     <center>
-        <h1 class="title">Adam Hammer</h1>
+        <!-- <h1 class="title">Adam Hammer</h1>
 
         <a
         target="_blank"
@@ -80,7 +80,7 @@
         href="https://www.youtube.com/">
         <img src="http://i.imgur.com/UWxTPlb.png" height="42" width="42"
         onmouseover="this.src='http://i.imgur.com/B26eeY9.png';" 
-        onmouseout="this.src='http://i.imgur.com/UWxTPlb.png';"></a>
+        onmouseout="this.src='http://i.imgur.com/UWxTPlb.png';"></a> -->
     </center>
     <script src="main.js"></script>
 </body>
