--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             padding: 0;
             overflow: hidden;
         }
+
+        p {
+            color: #28281c;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 30px;
+        }
     </style>
 </body>
 </html>
